[gd_scene load_steps=11 format=2]

[ext_resource path="res://BadGuy.gd" type="Script" id=1]
[ext_resource path="res://Mat/red.tres" type="Material" id=2]

[sub_resource type="CapsuleMesh" id=4]
radius = 0.5
mid_height = 1.5

[sub_resource type="CubeMesh" id=6]

[sub_resource type="CapsuleShape" id=5]
radius = 0.5
height = 1.5

[sub_resource type="CylinderShape" id=7]

[sub_resource type="SphereShape" id=8]

[sub_resource type="ParticlesMaterial" id=9]
direction = Vector3( 0, 3, 0 )
spread = 100.0
gravity = Vector3( 0, -3, 0 )
initial_velocity = 10.0
scale = 0.5

[sub_resource type="SpatialMaterial" id=10]
flags_transparent = true
flags_unshaded = true
vertex_color_use_as_albedo = true
params_blend_mode = 1
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_color = Color( 0.8, 0.584314, 0.0823529, 1 )

[sub_resource type="QuadMesh" id=11]
material = SubResource( 10 )

[node name="BadGuy" type="KinematicBody" groups=["Enemy"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.3, 0 )
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( -4.37114e-08, 1, -4.37114e-08, 0, -4.37114e-08, -1, -1, -4.37114e-08, 1.91069e-15, -0.112524, 0, -0.112524 )
mesh = SubResource( 4 )
skeleton = NodePath("")
material/0 = ExtResource( 2 )

[node name="MeshInstance2" type="MeshInstance" parent="."]
transform = Transform( -2.75038e-08, 0.14057, -6.14451e-09, 0, -7.99916e-09, -0.182999, -0.629214, -6.14451e-09, 2.68585e-16, -0.112524, 0.460654, -0.737756 )
mesh = SubResource( 6 )
skeleton = NodePath("")
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( -4.37114e-08, 1, -4.37114e-08, 0, -4.37114e-08, -1, -1, -4.37114e-08, 1.91069e-15, -0.112524, 0, -0.112524 )
shape = SubResource( 5 )

[node name="Area" type="Area" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0 )
collision_layer = 3
collision_mask = 3

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 15, 0, 0, 0, 1, 0, 0, 0, 15, 0, 0, 0 )
shape = SubResource( 7 )

[node name="Explosion range" type="Area" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape" type="CollisionShape" parent="Explosion range"]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0, 0 )
shape = SubResource( 8 )

[node name="Particles" type="Particles" parent="."]
emitting = false
amount = 300
lifetime = 2.0
randomness = 1.0
process_material = SubResource( 9 )
draw_pass_1 = SubResource( 11 )

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
[connection signal="body_entered" from="Explosion range" to="." method="_on_Explosion_range_body_entered"]
